crates/mineral-config/src/snapshots/renders_valid_config.snap
---
source: crates/mineral-config/src/check.rs
description: "config check:默认有效配置(无警告,无色)"
expression: out
---
Mineral configuration check
  volume: 100
  audio backend: auto
  audio cache (bytes): 10737418240
  cover cache (bytes): 4294967296
  download quality: lossless
  download dir: /home/user/Music/mineral (default)
  netease timeout (s): 100
  gapless prefetch (ms): 10000
Config OK, no warnings.
