crates/mineral-config/src/snapshots/renders_with_warnings.snap
---
source: crates/mineral-config/src/check.rs
description: "config check:含一条字段路径警告(已回落默认,无色)"
expression: out
---
Mineral configuration check
  volume: 100
  audio backend: auto
  audio cache (bytes): 10737418240
  cover cache (bytes): 4294967296
  download quality: lossless
  download dir: /home/user/Music/mineral (default)
  netease timeout (s): 100
  gapless prefetch (ms): 10000
1 warning(s) (using defaults):
  - config.lua 字段 `audio.volume` 错误,已回落默认:invalid type: string "loud", expected u8
